# blobfile

./: .git-blame-ignore-revs  CHANGES.md  Dockerfile  README.md  action.yml  build-pyi.py  conftest.py  env.yaml  pyproject.toml  pyrightconfig.json  repro.py  run-tests.py  run-tests.sh  setup.py
.github/workflows/: lint.yml  main.yml
blobfile/: __init__.py  __init__.pyi  _auto_parallelizer.py  _auto_parallelizer_test.py  _aws.py  _azure.py  _azure_cloud.py  _azure_cloud_test.py  _cache.py  _common.py  _context.py  _gcp.py  _ops.py  _ops_test.py  _xml.py  _xml_test.py  azure.py  blobfile.py  blobfile_test.py  common.py  common.pyi  google.py  ops.py  ops.pyi  ops_test.py
docs/: parallel_examples.md
scripts/: export-stubs.py  filter-stubs.py  performance_test.py  performance_test_parallel.py
testing/: Dockerfile  README.md  action.yml  env.yaml  run-static.py  run-tests.py  run.py
typings/: filelock.pyi  xmltodict.pyi
typings/Cryptodome/Signature/: pkcs1_15.pyi
typings/urllib3/: connection.pyi  connectionpool.pyi  exceptions.pyi  fields.pyi  filepost.pyi  poolmanager.pyi  request.pyi  response.pyi
typings/urllib3/util/: request.pyi  retry.pyi  ssl_.pyi  url.pyi
