[project]
name = "blobfile"
version = "3.2.0"
description = "Read GCS, ABS and local paths with the same interface, clone of tensorflow.io.gfile"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Public Domain"}
authors = [{name = "Christopher Hesse"}]
dependencies = [
    "pycryptodomex>=3.8",
    "urllib3>=2",
    "lxml>=4.9",
    "filelock>=3.0",
]

[project.urls]
Homepage = "https://github.com/blobfile/blobfile"

[tool.setuptools.packages.find]
include = ["blobfile*"]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
skip-magic-trailing-comma = true
